--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,8 @@
 <h1>My site</h1>
 
 <body>
+    <p>This is only my site don't come who are looking for another stuff</p>
+    <p2>and please note that this is some personal site but not bussiness site </p2>
     Wellcom to my website!
 </body>
 
