--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
 
 <title>Hello</title>
 
-<h1>My site</h1>
+<h1>welcome to my site!</h1>
 
 <body>
     <p>This is only my site don't come who are looking for another stuff</p>
